Add some more reference links to docs

--- a/docs/formats/d2.md
+++ b/docs/formats/d2.md
@@ -9,3 +9,8 @@ Byte Offset | Size (bytes) | Description
 ## Item Data Format
 
 TODO
+
+## Sources / Further Reading
+
+* [krisives/d2s-format (GitHub)](https://github.com/krisives/d2s-format#items)
+* [Diablo II Item Format (v1.09)](https://user.xmission.com/~trevin/DiabloIIv1.09_Item_Format.shtml)
