docs: Update set properties description
Somewhat related to #4

--- a/docs/formats/d2.md
+++ b/docs/formats/d2.md
@@ -133,7 +133,7 @@ Varies | ***<p>Only exists when the item is personalized</p>*** The name of the 
 4 | ***<p>Only exists if the item is socketed</p>*** Total number of sockets in the item (both filled and/or unfilled)
 5 | ***<p>Only exists if the item's rarity is set</p>*** Set properties bit field, used later for reading the set property lists of the item
 Varies | List of magical properties of the item. See [Property Lists](#property-lists)
-Varies | ***<p>Only exists if the set properties bit field of the item is not zero</p>*** List of set property lists of the item. Repeat the following 5 times (once for each bit of the set properties bit field): <ul><li>Check that the property list exists by verifying that the bit of the set properties bit field cooresponding to this list is set. That is, if you are starting at index 0, then <code>bitfield &amp; (1 &lt;&lt; index)</code> needs to be 1.</li><li>If the coorespoding bit is set, then read a <a href="#property-lists">Property List</a></li></ul>
+Varies | ***<p>Only exists if the set properties bit field of the item is not zero</p>*** List of set property lists of the item. These properties are the green bonuses that get applied per-item, not the overall set bonuses. These property lists will exist even if the bonuses are not currently active. Repeat the following 5 times (once for each bit of the set properties bit field): <ul><li>Check that the property list exists by verifying that the bit of the set properties bit field cooresponding to this list is set. That is, if you are starting at index 0, then <code>bitfield &amp; (1 &lt;&lt; index)</code> needs to be 1.</li><li>If the coorespoding bit is set, then read a <a href="#property-lists">Property List</a></li></ul>
 Varies | ***<p>Only exists if the item has a runeword given to it</p>*** A [property list](#property-lists) containing the properties of the item that come from the runeword.
 ... | This item has been fully read and the remaining bits up to the next byte boundary are padded with 0's
 
