Fix cross-reference links in docs
Apparently .md links aren't converted outside of SUMMARY.md?

--- a/docs/formats/d2.md
+++ b/docs/formats/d2.md
@@ -70,14 +70,14 @@ Bit Offset | Size (bits) | Description
 41 | 1 | Unknown
 42 | 1 | Item has been given a runeword
 43 | 5 | Unknown
-48 | 8 | Version of the item. See [the `version` field of the `d2item` struct](api.md#structd2item).
+48 | 8 | Version of the item. See [the `version` field of the `d2item` struct](/api.html#structd2item).
 56 | 2 | Unknown
-58 | 3 | Item location. See [the `locationID` field of the `d2item` struct](api.md#structd2item).
-61 | 4 | Item equipped location. See [the `equippedID` field of the `d2item` struct](api.md#structd2item).
+58 | 3 | Item location. See [the `locationID` field of the `d2item` struct](/api.html#structd2item).
+61 | 4 | Item equipped location. See [the `equippedID` field of the `d2item` struct](/api.html#structd2item).
 65 | 4 | Item position X coordinate
 69 | 3 | Item position Y coordinate
 72 | 1 | Unknown
-73 | 3 | Panel containing the item. See [the `panelID` field of the `d2item` struct](api.md#structd2item).
+73 | 3 | Panel containing the item. See [the `panelID` field of the `d2item` struct](/api.html#structd2item).
 76 | ... | If the item is an ear (bit offset 32), then see "Ear", otherwise skip to "Non-Ear"
 
 #### Ear
@@ -103,7 +103,7 @@ Bit Offset | Size (bits) | Description
 ------------|:------------:|-------------
 111 | 32 | Unique identifier. Typically interpretted as an unsigned 32 bit integer and displayed using the printf format string "%08X"
 143 | 7 | Item level
-150 | 4 | Item rarity ID. See [the `rarity` field of the `d2item` struct](api.md#structd2item)
+150 | 4 | Item rarity ID. See [the `rarity` field of the `d2item` struct](/api.html#structd2item)
 
 From here on out, bit offsets begin to vary depending on the values of the fields, so they will no longer be shown.
 
@@ -112,15 +112,15 @@ Size (bits) | Description
 1 | Item has multiple pictures
 3 | ***<p>Only exists when the item has multiple pictures</p>*** ID of the picture used for this item (out of the available pictures for the item type)
 1 | Item is class specific
-11 | ***<p>Only exists when the item is class specific</p>*** ID of the class-specific automagic affix the item has (see [the `automagicID` field of the `d2item` struct](api.md#structd2item))
-3 | ***<p>Only exists when the item's rarity is low quality</p>*** ID of the low quality type of the item (see [the `lowQualityID` field of the `d2item` struct](api.md#structd2item))
-3 | ***<p>Only exists when the item's rarity is superior/high quality</p>*** ID of the superior type of the item (see [the `superiorID` field of the `d2item` struct](api.md#structd2item))
-11 | ***<p>Only exists when the item's rarity is magic</p>*** ID of the prefix type of the item (see [the `magicPrefix` field of the `d2item` struct](api.md#structd2item))
-11 | ***<p>Only exists when the item's rarity is magic</p>*** ID of the suffix type of the item (see [the `magicSuffix` field of the `d2item` struct](api.md#structd2item))
-12 | ***<p>Only exists when the item's rarity is set</p>*** ID of the set type of the item (see [the `setID` field of the `d2item` struct](api.md#structd2item))
-12 | ***<p>Only exists when the item's rarity is unique</p>*** ID of the unique type of the item (see [the `uniqueID` field of the `d2item` struct](api.md#structd2item))
-8 | ***<p>Only exists when the item's rarity is rare or crafted</p>*** ID of the first name of the item (see [the `nameID1` field of the `d2item` struct](api.md#structd2item))
-8 | ***<p>Only exists when the item's rarity is rare or crafted</p>*** ID of the second name of the item (see [the `nameID2` field of the `d2item` struct](api.md#structd2item))
+11 | ***<p>Only exists when the item is class specific</p>*** ID of the class-specific automagic affix the item has (see [the `automagicID` field of the `d2item` struct](/api.html#structd2item))
+3 | ***<p>Only exists when the item's rarity is low quality</p>*** ID of the low quality type of the item (see [the `lowQualityID` field of the `d2item` struct](/api.html#structd2item))
+3 | ***<p>Only exists when the item's rarity is superior/high quality</p>*** ID of the superior type of the item (see [the `superiorID` field of the `d2item` struct](/api.html#structd2item))
+11 | ***<p>Only exists when the item's rarity is magic</p>*** ID of the prefix type of the item (see [the `magicPrefix` field of the `d2item` struct](/api.html#structd2item))
+11 | ***<p>Only exists when the item's rarity is magic</p>*** ID of the suffix type of the item (see [the `magicSuffix` field of the `d2item` struct](/api.html#structd2item))
+12 | ***<p>Only exists when the item's rarity is set</p>*** ID of the set type of the item (see [the `setID` field of the `d2item` struct](/api.html#structd2item))
+12 | ***<p>Only exists when the item's rarity is unique</p>*** ID of the unique type of the item (see [the `uniqueID` field of the `d2item` struct](/api.html#structd2item))
+8 | ***<p>Only exists when the item's rarity is rare or crafted</p>*** ID of the first name of the item (see [the `nameID1` field of the `d2item` struct](/api.html#structd2item))
+8 | ***<p>Only exists when the item's rarity is rare or crafted</p>*** ID of the second name of the item (see [the `nameID2` field of the `d2item` struct](/api.html#structd2item))
 Varies | ***<p>Only exists when the item's rarity is rare or crafted</p>*** <p>Rare/crafted affixes. Each affix has a 1-bit-wide field denoting whether or not an 11-bit-wide affix ID field follows (`hasAffix`). If `hasAffix` is 1, then an 11-bit-wide field containing the ID of the affix follows. Otherwise, another 1-bit-wide `hasAffix` field follows.</p> There are a total of 6 of these affixes, where the affixes switch off between prefixes and suffixes, starting with prefix.
 16 | ***<p>Only exists when the item has a runeword given to it</p>*** <p>12-bit-wide field followed by 4 unknown bits. The 12-bit-wide field is some sort of index into Diablo II's localization string table that contains the name of the runeword of the item, used only for displaying the runeword name of the item.</p> *Note: this should not be used to determine what runeword an item is, and instead that should be determined by the order of the runes socketed in the item.*
 Varies | ***<p>Only exists when the item is personalized</p>*** The name of the character that personalized the item as a null-terminated string of 7-bit-wide characters.
